# Code

./: CMakeLists.txt  CMakeLists.txt~  binpicker.cpp
Robot/: CMakeLists.txt  Main.cpp
Robot/urlib/: UR3_Lib.cpp  UR3_Lib.h  UR_Control.cpp  UR_Control.h  robot_state.cpp  robot_state.h  robot_state_RT.cpp  robot_state_RT.h  ur_communication.cpp  ur_communication.h  ur_realtime_communication.cpp  ur_realtime_communication.h
Vision/: 2d_depth_detector.cpp  2d_depth_detector.h  AerobicVision.cpp  AerobicVision.h  CMakeLists.txt  main.cpp
Vision/examples/: 3d_test.cpp  3d_viewer.cpp  CMakeLists.txt  cloud_viewer_example.cpp  conditional_euclidean_clustering.cpp  live_viewer.cpp  pclvisualizer.cpp  point_cloud.pcd  readme.md  region_growing_segmentation.cpp  segmentation.cpp
